[package]
name = "drogue-ttn"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "API mappings for the 'The Things Network'"
repository = "https://github.com/drogue-iot/drogue-ttn"
homepage = "https://blog.drogue.io"
categories = ["api-bindings"]
keywords = ["ttn", "TheThingsNetwork", "IoT", "LoRa", "LoRaWAN"]
readme = "README.md"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
base64 = "0.13"
base64-serde = "0.6"

[dev-dependencies]
serde_json = "1"